# VECTOR-Engine

./: .aiignore  .gitignore  ARCHITECTURE.md  CMakeLists.txt  README.md  compile_shaders.bat  engine_improvement_roadmap.md  task.md  vcpkg.json
.agents/: AGENTS.md  ARCHITECTURE.md
assets/: sky_back.hdr  sky_bottom.hdr  sky_top.hdr
assets/engine/shaders/: bloom_downsample.frag  bloom_upsample.frag  deferred_light.frag  depth.frag  depth.hlsl  depth.vert  gbuffer.frag  gbuffer.vert  main2D.frag  main2D.hlsl  main2D.vert  main3D.frag  main3D.hlsl  main3D.vert  postprocess.frag  postprocess.hlsl
assets/engine/shaders/vulkan/: bloom_downsample.frag  bloom_upsample.frag  depth.frag  depth.vert  main3D.frag  main3D.frag.spv  main3D.vert  main3D.vert.spv  postprocess.frag  prepass.frag  prepass.vert  skybox.frag  skybox.vert  ssao.frag  ssao_blur.frag
assets/materials/: floor.vmat  heavy_target.vmat  light_target.vmat  medium_target.vmat
include/Engine/Audio/: AudioAPI.hpp  AudioManager.hpp  SDLMixerBackend.hpp  XAudio2Backend.hpp
include/Engine/Core/: Application.hpp  JobSystem.hpp  ResourceManager.hpp  SDLWindow.hpp  Scene.hpp  SceneManager.hpp  Win32Window.hpp  Window.hpp
include/Engine/ECS/: Components.hpp  ECS.hpp
include/Engine/Events/: Event.hpp  EventBus.hpp
include/Engine/Graphics/: Animation.hpp  Animator.hpp  Bone.hpp  Buffer.hpp  Framebuffer.hpp  Frustum.hpp  GraphicsContext.hpp  Material.hpp  Mesh.hpp  Model.hpp  ParticleSystem.hpp  RenderQueue.hpp  Renderer.hpp  RendererAPI.hpp  Shader.hpp  SkeletalAnimator.hpp  Texture.hpp  Texture2D.hpp  UniformBufferObject.hpp  VertexArray.hpp
include/Engine/Graphics/DirectX/: DirectX12Buffer.hpp  DirectX12Context.hpp  DirectX12Framebuffer.hpp  DirectX12RendererAPI.hpp  DirectX12Shader.hpp  DirectX12Texture2D.hpp  DirectX12VertexArray.hpp
include/Engine/Graphics/OpenGL/: OpenGLBuffer.hpp  OpenGLContext.hpp  OpenGLFramebuffer.hpp  OpenGLMesh.hpp  OpenGLRenderer.hpp  OpenGLRendererAPI.hpp  OpenGLShader.hpp  OpenGLTexture2D.hpp  OpenGLUniformBuffer.hpp  OpenGLVertexArray.hpp
include/Engine/Graphics/Vulkan/: VulkanBuffer.hpp  VulkanContext.hpp  VulkanCubemap.hpp  VulkanDescriptorManager.hpp  VulkanMesh.hpp  VulkanPipeline.hpp  VulkanPostProcessor.hpp  VulkanPrepass.hpp  VulkanRenderer.hpp  VulkanSSAO.hpp  VulkanShader.hpp  VulkanShadowPass.hpp  VulkanSwapchain.hpp  VulkanTexture2D.hpp  VulkanUniformBuffer.hpp
include/Engine/Input/: InputManager.hpp  KeyCodes.hpp
include/Engine/Math/: GameObject.hpp
include/Engine/Physics/: BulletPhysicsSystem.hpp  CharacterControllerComponent.hpp  PhysicsUtils.hpp
include/Engine/Scene/: SceneSerializer.hpp
include/Engine/UI/: UIButton.hpp  UIElement.hpp  UISlider.hpp  UISystem.hpp
include/Game/Core/: EntityFactory.hpp  GameComponents.hpp  PongGame.hpp  SaveManager.hpp
include/Game/Editor/: EditorUI.hpp
include/Game/Events/: GameEvents.hpp
include/Game/Scenes/: GameplayScene.hpp  LoadingScene.hpp  MainMenuScene.hpp  SplashScene.hpp
include/Game/Systems/: CameraSystem.hpp  GameSystems.hpp
src/: main.cpp
src/Engine/: Application.cpp  Application.hpp  GameObject.hpp  InputManager.cpp  Math.hpp  Renderer.cpp  Renderer.hpp  Texture.cpp
src/Engine/Audio/: AudioAPI.cpp  AudioManager.cpp  AudioManager.hpp  SDLMixerBackend.cpp  XAudio2Backend.cpp
src/Engine/Core/: Application.cpp  Application.hpp  JobSystem.cpp  Logger.cpp  Logger.hpp  ResourceManager.cpp  ResourceManager.hpp  SDLWindow.cpp  Scene.hpp  SceneManager.cpp  SceneManager.hpp  Win32Window.cpp  Window.cpp
src/Engine/ECS/: Components.hpp  ECS.hpp  System.hpp  UIComponents.hpp
src/Engine/Events/: EventBus.cpp  EventBus.hpp
src/Engine/Graphics/: Animation.cpp  Animator.cpp  Bone.cpp  Buffer.cpp  Framebuffer.cpp  Frustum.cpp  Material.cpp  Mesh.cpp  Mesh.hpp  Model.cpp  ParticleSystem.cpp  ParticleSystem.hpp  RenderQueue.cpp  RenderQueue.hpp  Renderer.cpp  Renderer.hpp  RendererAPI.cpp  RendererAPI.hpp  Shader.cpp  Shader.hpp  SkeletalAnimator.cpp  Texture.cpp  Texture2D.cpp  Texture2D.hpp  UniformBufferObject.cpp  VertexArray.cpp
src/Engine/Graphics/DirectX/: DirectX12Buffer.cpp  DirectX12Context.cpp  DirectX12Framebuffer.cpp  DirectX12RendererAPI.cpp  DirectX12Shader.cpp  DirectX12Texture2D.cpp  DirectX12VertexArray.cpp
src/Engine/Graphics/OpenGL/: OpenGLBuffer.cpp  OpenGLContext.cpp  OpenGLFramebuffer.cpp  OpenGLMesh.cpp  OpenGLRenderer.cpp  OpenGLRendererAPI.cpp  OpenGLShader.cpp  OpenGLTexture2D.cpp  OpenGLTexture2D.hpp  OpenGLUniformBuffer.cpp  OpenGLVertexArray.cpp
src/Engine/Graphics/Vulkan/: VulkanBuffer.cpp  VulkanContext.cpp  VulkanCubemap.cpp  VulkanDescriptorManager.cpp  VulkanMesh.cpp  VulkanPipeline.cpp  VulkanPostProcessor.cpp  VulkanPrepass.cpp  VulkanRenderer.cpp  VulkanSSAO.cpp  VulkanShader.cpp  VulkanShadowPass.cpp  VulkanSwapchain.cpp  VulkanTexture2D.cpp  VulkanUniformBuffer.cpp
src/Engine/Input/: InputManager.cpp  InputManager.hpp
src/Engine/Physics/: Box2DPhysicsSystem.cpp  Box2DPhysicsSystem.hpp  BulletPhysicsSystem.cpp  PhysicsUtils.cpp
src/Engine/Scene/: SceneSerializer.cpp
src/Engine/UI/: UIButton.cpp  UIButton.hpp  UIManager.cpp  UIManager.hpp  UISlider.cpp  UISystem.cpp
src/Game/: AgentPaddle.cpp  AgentPaddle.hpp  Ball.cpp  Ball.hpp  Paddle.cpp  Paddle.hpp  PongGame.cpp  PongGame.hpp
src/Game/Core/: EntityFactory.cpp  PongGame.cpp  PongGame.hpp  SaveManager.cpp
src/Game/Editor/: EditorUI.cpp
src/Game/Entities/: AIPaddle.cpp  AIPaddle.hpp  Ball.cpp  Ball.hpp  Paddle.cpp  Paddle.hpp
src/Game/Scenes/: GameplayScene.cpp  GameplayScene.hpp  LoadingScene.cpp  MainMenuScene.cpp  MainMenuScene.hpp  SplashScene.cpp
src/Game/Systems/: CameraSystem.cpp  CameraSystem.hpp  GameSystems.cpp  GameSystems.hpp  ShootingSystem.cpp  ShootingSystem.hpp
